# scraping-pokemon

./: .gitignore  main.py  pyproject.toml  query.py  query.sh  save_img.py  scrape.sh  setup.sh
docs/: README.md
scraping-pokemon/: main.py
scraping-pokemon/src/: __init__.py  utils.py
scraping-pokemon/src/database/: db.py
scraping-pokemon/src/scraping/: __init__.py  coro_generations.py  coro_pokemon_details.py
scraping_pokemon/: main.py  query.py
scraping_pokemon/docs/: README.md
scraping_pokemon/src/: __init__.py  environ.py  utils.py
scraping_pokemon/src/database/: db.py
scraping_pokemon/src/scraping/: coro_generations.py  coro_main.py  coro_pokedex_cards.py  coro_pokedex_urls.py  coro_pokemon_details.py
src/: __init__.py  db.py  environ.py  scraping.py  types.py  utils.py
src/database/: db.py
src/db/: db.py  models.py
src/scraping/: __init__.py  coro_generations.py  coro_main.py  coro_pokedex_cards.py  coro_pokedex_urls.py  coro_pokemon_details.py
